Add GET All Documents implementation and testing
