# src/main/java/com/visiblethread/docanalyzer/persistence/entity/DocumentEntity.java
@@ -1,0 +1,31 @@
+package com.visiblethread.docanalyzer.persistence.entity;
+
+import jakarta.persistence.*;
+import lombok.Data;
+import org.hibernate.annotations.CreationTimestamp;
+
+import java.time.Instant;
+
+@Entity
+@Data
+@Table(name = "document")
+public class DocumentEntity {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(nullable = false, unique = true)
+    private String name;
+
+    @Column(name = "word_count", nullable = false)
+    private Integer wordCount;
+
+    @Column(name = "uploaded_at")
+    @CreationTimestamp
+    private Instant uploadedAt;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "user_id", nullable = false)
+    private UserEntity userEntity;
+}
