# src/main/resources/docanalyzer-openapi.yaml
@@ -112,6 +112,30 @@ paths:
               schema:
                 $ref: "#/components/schemas/internalServerError"
 
+  /documents:
+    get:
+      summary: List all documents
+      operationId: getAllDocuments
+      tags:
+        - Documents
+      responses:
+        200:
+          description: A list of all documents
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/document"
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/internalServerError"
+
+
+
 components:
   schemas:
     team:
@@ -151,6 +175,38 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/team'
+
+    document:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        name:
+          type: string
+          example: Report.txt
+        wordCount:
+          type: integer
+          example: 1233
+        uploadedAt:
+          type: string
+          format: date-time
+          x-java-type: java.time.Instant
+          example: "2025-02-24T12:00:00Z"
+        userId:
+          type: integer
+          format: int64
+          example: 1
+      required:
+        - id
+        - name
+        - wordCount
+        - uploadedAt
+        - userId
+      example:
+        id: 1
+        name: Healthcare
 
     createUserRequest:
       type: object
